Restore lib/api.ts as compatibility wrapper